--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.16.3",
+    "mysql": "^2.16.0",
     "node": "^11.12.0",
     "nodemon": "^1.18.10"
   }
